force-app/main/default/objects/NEWOPTION__c/NEWOPTION__c.object-meta.xml
<CustomObject>
    <description>New option added for customer</description>
    <label>NEWOPTION</label>
    <nameField>
        <label>NEWOPTION Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEWOPTIONS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>