force-app/main/default/objects/NEWOPTION__c/fields/Countrty__c.field-meta.xml
<CustomField>
    <fullName>Countrty__c</fullName>
    <label>Countrty</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>