force-app/main/default/objects/NEWOPTION__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Enter your name</description>
    <label>Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>