force-app/main/default/objects/NEWOPTION__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>