force-app/main/default/objects/NEWOPTION__c/fields/Primary_interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_interest__c</fullName>
    <label>Primary interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Writing</fullName>
            </value>
            <value>
                <fullName>Drawing</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>