force-app/main/default/objects/NEWOPTION__c/fields/Secondary_interest__c.field-meta.xml
<CustomField>
    <fullName>Secondary_interest__c</fullName>
    <label>Secondary interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fantasy</fullName>
            </value>
            <value>
                <fullName>fiction</fullName>
            </value>
            <value>
                <fullName>management</fullName>
            </value>
            <value>
                <fullName>modern art</fullName>
            </value>
            <value>
                <fullName>paint</fullName>
            </value>
            <value>
                <fullName>crayon</fullName>
            </value>
            <value>
                <fullName>pencil shading</fullName>
            </value>
            <value>
                <fullName>classical</fullName>
            </value>
            <value>
                <fullName>rock</fullName>
            </value>
            <value>
                <fullName>pop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>